5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1721_3032.log
== TEST (2019-05-02 18:29:04) 
-- CODE:
from math import*
x = float(input("valor de x : "))
if(x == 0 ):
	fx = x<= 0
	print(round(fx,4))
elif(x == 1):
	fx = 0< x <= 1
	print(round(fx,4))
elif(x == x**(1/2)):
	fx = 1 < x <= 2 
	print(round(fx,4))
elif(x == x**(1/3)) :
	fx = x>2

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:29:06) 
-- CODE:
from math import*
x = float(input("valor de x : "))
if(x == 0 ):
	fx = x<= 0
	print(round(fx,4))
elif(x == 1):
	fx = 0< x <= 1
	print(round(fx,4))
elif(x == x**(1/2)):
	fx = 1 < x <= 2 
	print(round(fx,4))
elif(x == x**(1/3)) :
	fx = x>2

-- EXECUTION TIME:
0.172793
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:

-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:

-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:29:08) 
-- CODE:
from math import*
x = float(input("valor de x : "))
if(x == 0 ):
	fx = x<= 0
	print(round(fx,4))
elif(x == 1):
	fx = 0< x <= 1
	print(round(fx,4))
elif(x == x**(1/2)):
	fx = 1 < x <= 2 
	print(round(fx,4))
elif(x == x**(1/3)) :
	fx = x>2

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:01) 
-- CODE:
from math import*
x = float(input("valor de x : "))
if(x <= 0 ):
	fx == 0
	print(round(fx,4))
elif(0 < x <= 1):
	fx == 1
	print(round(fx,4))
elif(1< x <= 2):
	fx = x**(1/2) 
	print(round(fx,4))
elif(x > 2 ):
	fx = x ** (1/3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    fx == 1
NameError: name 'fx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:33:13) 
-- CODE:
from math import*
x = float(input("valor de x : "))
if(x <= 0 ):
	fx == 0
	print(round(fx,4))
elif(0 < x <= 1):
	fx == 1
	print(round(fx,4))
elif(1< x <= 2):
	fx = x**(1/2) 
	print(round(fx,4))
elif(x > 2 ):
	fx = x ** (1/3)

-- EXECUTION TIME:
0.244021
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1721/3032/main.py", line 7, in <module>
    fx == 1
NameError: name 'fx' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:19) 
-- CODE:
from math import*
x = float(input("valor de x : "))
if(x <= 0 ):
	fx == 0
	print(round(fx,4))
elif(0 < x <= 1):
	fx == 1
	print(round(fx,4))
elif(1< x <= 2):
	fx = x**(1/2) 
	print(round(fx,4))
elif(x > 2 ):
	fx = x ** (1/3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    fx == 1
NameError: name 'fx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:36) 
-- CODE:
from math import*
x = float(input("valor de x : "))
if(x <= 0 ):
	fx == 0
	print(round(fx,4))
elif(0 < x <= 1):
	fx == 1
	print(round(fx,4))
elif(1< x <= 2):
	fx = x**(1/2) 
	print(round(fx,4))
elif(x > 2 ):
	fx = x ** (1/3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    fx == 1
NameError: name 'fx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:55) 
-- CODE:
from math import*
x = float(input("valor de x : "))
if(x <= 0 ):
	fx == 0
	print(round(fx,4))
elif(0 < x <= 1):
	fx == 1
	print(round(fx,4))
elif(1< x <= 2):
	fx = x**(1/2) 
	print(round(fx,4))
elif(x > 2 ):
	fx = x ** (1/3)
	print(round(fx,4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    fx == 1
NameError: name 'fx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:34:07) 
-- CODE:
from math import*
x = float(input("valor de x : "))
if(x <= 0 ):
	fx == 0
	print(round(fx,4))
elif(0 < x <= 1):
	fx == 1
	print(round(fx,4))
elif(1< x <= 2):
	fx = x**(1/2) 
	print(round(fx,4))
elif(x > 2 ):
	fx = x ** (1/3)
	print(round(fx,4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    fx == 1
NameError: name 'fx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:34:29) 
-- CODE:
from math import*
x = float(input("valor de x : "))
if(x <= 0 ):
	fx == 0
	print(round(fx,4))
elif(0 < x <= 1):
	fx == 1
	print(round(fx,4))
elif(1< x <= 2):
	fx = x**(1/2) 
	print(round(fx,4))
elif(x > 2 ):
	fx = x ** (1/3)
	print(round(fx,4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    fx == 1
NameError: name 'fx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:35:01) 
-- CODE:
from math import*
x = float(input("valor de x : "))
if(x <= 0 ):
	fx == 0
	print(round(fx,4))
elif(0 < x <= 1):
	fx == 1
	print(round(fx,4))
elif(1< x <= 2):
	fx = x**(1/2) 
	print(round(fx,4))
elif(x > 2 ):
	fx = x ** (1/3)
	print(round(fx,4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    fx == 1
NameError: name 'fx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:35:50) 
-- CODE:
from math import*
x = float(input("valor de x : "))
if(x <= 0 ):
	fx == 0
	print(round(fx,4))
elif(0 < x <= 1):
	fx == 1
	print(round(fx,4))
elif(1< x <= 2):
	fx = x**(1/2) 
	print(round(fx,4))
elif(x > 2 ):
	fx = x ** (1/3)
	print(round(fx,4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    fx == 1
NameError: name 'fx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:36:56) 
-- CODE:
from math import*
x = float(input("valor de x : "))
if(x <= 0 ):
	fx == 0
	print(round(fx,4))
elif(0 < x <= 1):
	fx == 1
	print(round(fx,4))
elif(1< x <= 2):
	fx = x**(1/2) 
	print(round(fx,4))
elif(x > 2 ):
	fx = x ** (1/3)
	print(round(fx,4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    fx == 1
NameError: name 'fx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:37:05) 
-- CODE:
from math import*
x = float(input("valor de x : "))
if(x <= 0 ):
	fx == 0
	print(round(fx,4))
elif(0 < x <= 1):
	fx == 1
	print(round(fx,4))
elif(1< x <= 2):
	fx = x**(1/2) 
	print(round(fx,4))
elif(x > 2 ):
	fx = x ** (1/3)
	print(round(fx,4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    fx == 1
NameError: name 'fx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:37:38) 
-- CODE:
from math import*
x = float(input("valor de x : "))
if(x <= 0 ):
	fx = 0
	print(round(fx,4))
elif(0 < x <= 1):
	fx = 1
	print(round(fx,4))
elif(1< x <= 2):
	fx = x**(1/2) 
	print(round(fx,4))
elif(x > 2 ):
	fx = x ** (1/3)
	print(round(fx,4))

-- EXECUTION TIME:
0.132324
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4107
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.262
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
